# Misogi

./: .dockerignore  .gitignore  CHANGELOG.md  CHANGELOG_ja.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_ja.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PATENTS  README.md  README_ja.md  SECURITY.md  docker-compose.yml  release.toml
crates/misogi-auth/: Cargo.toml  README.md  README_ja.md
crates/misogi-auth/src/: engine.rs  engine_tests.rs  extractors.rs  grpc_interceptors.rs  ldap_provider.rs  lib.rs  middleware.rs  models.rs  oidc_provider.rs  provider.rs  registry.rs  role.rs  saml_provider.rs  store.rs
crates/misogi-auth/src/_jwt/: authenticator.rs  issuer.rs  mod.rs  validator.rs
crates/misogi-auth/src/claims/: mod.rs  tests.rs
crates/misogi-auth/src/device/: collector.rs  fingerprint.rs  mod.rs  validator.rs
crates/misogi-auth/src/edr/: defender.rs  falcon.rs  mod.rs  models.rs  traits.rs
crates/misogi-auth/src/engine/: tests.rs
crates/misogi-auth/src/extractors/: posture_extractor.rs  tests.rs
crates/misogi-auth/src/grpc_interceptors/: tests.rs
crates/misogi-auth/src/jwt/: authenticator.rs  issuer.rs  mod.rs  tests.rs  validator.rs
crates/misogi-auth/src/plugins/: mod.rs  oidc.rs
crates/misogi-auth/src/posture/: av_detector.rs  checker.rs  edr_bridge.rs  mod.rs  os_detector.rs  types.rs
crates/misogi-auth/src/provider/: tests.rs
crates/misogi-auth/src/registry/: tests.rs
crates/misogi-auth/src/tcm/: config.rs  mock.rs  mod.rs  traits.rs
crates/misogi-auth/tests/: integration_auth_pipeline.rs
crates/misogi-bootstrap/: Cargo.toml  README.md
crates/misogi-bootstrap/src/: app.rs  builder.rs  config.rs  error.rs  lib.rs
crates/misogi-cdr/: Cargo.toml  README.md  README_ja.md
crates/misogi-cdr/src/: image_metadata_sanitizer.rs  jtd_sanitizer.rs  lib.rs  office_sanitizer.rs  parser_registry.rs  parser_trait.rs  pdf_sanitizer.rs  pdf_true_cdr.rs  policy.rs  ppap_detector.rs  ppap_handler.rs  ppap_types.rs  report.rs  sanitizer_trait.rs  steganography_detector.rs  svg_sanitizer.rs  zip_scanner.rs
crates/misogi-cdr/src/ooxml_true_cdr/: binary.rs  config.rs  constants.rs  engine.rs  mod.rs  rels_cleaner.rs  report.rs  types.rs  xml_filter.rs
crates/misogi-cdr/src/parsers/: mod.rs  ooxml_parser.rs  pdf_parser.rs  zip_parser.rs
crates/misogi-cdr/src/pdf_true_cdr/: analyze.rs  constants.rs  extract.rs  parse.rs  rebuild.rs  types.rs
crates/misogi-cdr/tests/: format_expansion_test.rs  integration_cdr_pipeline.rs  ooxml_true_cdr_test.rs  pdf_true_cdr_test.rs
crates/misogi-config/: Cargo.toml  README.md
crates/misogi-config/src/: config.rs  error.rs  lib.rs
crates/misogi-config/src/config/: tests.rs
crates/misogi-core/: Cargo.toml  README.md  build.rs
crates/misogi-core/config/: pii-context-defaults.yaml  pii-secrecy-defaults.yaml  pii-structured-defaults.yaml
crates/misogi-core/proto/: file_transfer.proto
crates/misogi-core/proto/v2/: misogi.proto
crates/misogi-core/src/: approval.rs  audit_log.rs  error.rs  hash.rs  lib.rs  log_engine.rs  plugin_registry.rs  presets.rs  protocol.rs  tunnel.rs  types.rs
crates/misogi-core/src/abac/: attribute.rs  config.rs  decision.rs  engine.rs  evaluator.rs  executor.rs  hot_reload.rs  mod.rs  policy.rs  resolver.rs
crates/misogi-core/src/blast/: factory.rs  factory_tests.rs  frame.rs  mod.rs  receiver.rs  sender.rs
crates/misogi-core/src/cdr_strategies/: clamav_compat.rs  external_scanner.rs  format_downgrade.rs  mod.rs  pdf.rs  vba.rs
crates/misogi-core/src/cdr_v2/: ast.rs  config.rs  config_tests.rs  mod.rs  pipeline.rs  pipeline_tests.rs  types.rs
crates/misogi-core/src/contrib/: mod.rs
crates/misogi-core/src/drivers/: mod.rs
crates/misogi-core/src/engine/: mod.rs  state_machine.rs  webhook.rs
crates/misogi-core/src/fec/: interleaver.rs  mod.rs  reed_solomon.rs
crates/misogi-core/src/file_types/: mod.rs
crates/misogi-core/src/integrity/: config.rs  config_tests.rs  envelope.rs  envelope_tests.rs  mod.rs  repair.rs  repair_tests.rs  session.rs  session_manager.rs  session_manager_tests.rs  session_tests.rs  transport.rs  verifier.rs  verifier_tests.rs
crates/misogi-core/src/pii/: mod.rs
crates/misogi-core/src/relay/: config.rs  config_tests.rs  forwarder.rs  mesh.rs  mod.rs  node.rs  node_manager.rs  node_manager_tests.rs  route_planner.rs  route_planner_tests.rs  topology.rs
crates/misogi-core/src/scanners/: clamav_adapter.rs  mod.rs  (+3 more)
crates/misogi-health/: Cargo.toml  README.md
crates/misogi-health/src/: built_in_checks.rs  checker.rs  checker_tests.rs  handlers.rs  handlers_tests.rs  lib.rs  types.rs
crates/misogi-nocode/: Cargo.toml  README.md
crates/misogi-nocode/examples/: full_example.yaml  full_example_ja.yaml
crates/misogi-nocode/src/: api.rs  cli.rs  compiler.rs  error.rs  health.rs  lib.rs  main.rs  runtime.rs  schema.rs
crates/misogi-receiver/: Cargo.toml  README.md
crates/misogi-receiver/src/: cli.rs  config.rs  daemon.rs  grpc_service.rs  http_routes.rs  main.rs  router.rs  state.rs  storage.rs  tunnel_handler.rs
crates/misogi-rest-api/: Cargo.toml  README.md
crates/misogi-rest-api/src/: error.rs  lib.rs  metrics_ext.rs  models.rs  rate_limit.rs  router.rs  version_middleware.rs
crates/misogi-sender/: Cargo.toml  README.md
crates/misogi-sender/src/: approval_routes.rs  cli.rs  config.rs  daemon.rs  driver_instance.rs  grpc_service.rs  http_routes.rs  jtd_handler.rs  lib.rs  main.rs  router.rs  state.rs  tunnel_task.rs  upload_engine.rs  usability.rs
crates/misogi-smtp/: Cargo.toml  README.md
crates/misogi-smtp/src/: delivery.rs  error.rs  lib.rs  main.rs  mime_handler.rs  sanitize_pipeline.rs  server.rs
crates/misogi-wasm/: Cargo.toml  README.md
crates/misogi-wasm/benches/: generators.rs  wasm_perf.rs
crates/misogi-wasm/src/: abi.rs  adapter.rs  error.rs  ffi.rs  js_glue.rs  lib.rs  manager.rs  sandbox.rs  test_write.rs  tests_fixtures.rs  wasm_compat.rs
examples/python-client/: README.md  generate_stubs.bat  generate_stubs.sh  pyproject.toml  requirements.txt
examples/python-client/tests/: test_client.py
(+263 files in other folders)
