[package]
name = "misogi-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
misogi-core = { path = "../misogi-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
