[package]
name = "misogi-config"
version = "0.1.0"
edition = "2024"
description = "Centralized TOML configuration loader for Misogi system"

[dependencies]
# TOML parsing and serialization
toml = { version = "0.8", features = ["preserve_order"] }

# Serialization framework
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "2"

# Structured logging
tracing = "0.1"

# Lazy static initialization
once_cell = "1"

# Standard library extensions for path handling (already in std)
# std::path::PathBuf is sufficient

[features]
default = []
# Enable JWT configuration section
auth = []
# Enable CDR configuration section
cdr = []
# Enable storage configuration section
storage = []
# Enable transport configuration section
transport = []
# Enable all subsystem configurations
full = ["auth", "cdr", "storage", "transport"]

[dev-dependencies]
tempfile = "3"
serial_test = "3"
