[package]
name = "misogi-core"
version = "0.1.0"
edition = "2024"
description = "Core library for Misogi file transfer system"

[dependencies]
tokio = { version = "1", features = ["full"] }
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
bytes = "1"
prost = "0.13"
tonic = "0.12"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
hex-literal = "0.4"
serde_json = "1.0.149"
futures = "0.3"
async-trait = "0.1"

# Japanese compliance module dependencies
ipnetwork = "0.21"                 # IP CIDR matching for vendor isolation (Task 5.10)
encoding_rs = "0.8"                # Japanese encoding detection/conversion (Task 5.11)
regex = "1"                        # Pattern matching for Wareki detection (Task 5.9)
toml = "0.8"                       # Configuration file parsing (Task 5.9)
tera = "1"                         # Template engine for log formatting (Task 5.4)
encoding_rs_io = "0.1"             # Stream encoding support (Task 5.4)
zip = "2"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"

[build-dependencies]
prost-build = "0.13"
tonic-build = { version = "0.12", features = ["transport"] }

[features]
default = ["jp_contrib"]
jp_contrib = []
intl_contrib = []
clamav = []
