[package]
name = "misogi-receiver"
version = "0.1.0"
edition = "2024"
description = "Misogi receiver node - handles file reception and storage"

[[bin]]
name = "misogi-receiver"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tonic = { version = "0.12", features = ["tls"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = "0.7"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
notify = "7"
prost = "0.13"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
misogi-core = { path = "../misogi-core" }
