[package]
name = "misogi-rest-api"
version = "0.1.0"
edition = "2024"
description = "Comprehensive RESTful admin API for Misogi secure file transfer system"

[dependencies]
# --- Web framework ---
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Structured logging ---
tracing = "0.1"

# --- Identifiers & timestamps ---
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# --- Error handling ---
thiserror = "2"

# --- Middleware / tower stack ---
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# --- OpenAPI / Swagger (feature-gated) ---
utoipa = { version = "4", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "7", features = ["axum"], optional = true }

# --- HTTP client for external scanner calls ---
reqwest = "0.12"

# --- Pin projection utilities ---
pin-project-lite = "0.2"

# --- Concurrent data structures ---
dashmap = "6"

# --- Internal workspace crates ---
misogi-core = { path = "../misogi-core" }
misogi-cdr = { path = "../misogi-cdr" }
misogi-auth = { path = "../misogi-auth" }
misogi-nocode = { path = "../misogi-nocode" }

[features]
default = ["full"]
full = []
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
misogi-sender = { path = "../misogi-sender" }
